add: request debug console

--- a/src/main/resources/version.properties
+++ b/src/main/resources/version.properties
@@ -10,5 +10,7 @@ hikari.version=${hikari.version}
 logback.version=${logback.version}
 gson.version=${gson.version}
 lombok.version=${lombok.version}
-tomlj.version=${tomlj.version}
+toml4j.version=${toml4j.version}
 junit.version=${junit.version}
+caffeine.version=${caffeine.version}
+sitemapgen4j.version=${sitemapgen4j.version}
