--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,8 @@
     <maven.surefire.plugin.version>3.1.2</maven.surefire.plugin.version>
     <exec.maven.plugin.version>3.1.0</exec.maven.plugin.version>
     <build.helper.maven.plugin.version>3.4.0</build.helper.maven.plugin.version>
+    <maven.javadoc.plugin.version>3.10.1</maven.javadoc.plugin.version>
+    <dependency.check.maven.version>11.1.0</dependency.check.maven.version>
   </properties>
 
   <dependencies>
@@ -275,6 +277,52 @@
           <artifactId>build-helper-maven-plugin</artifactId>
           <version>${build.helper.maven.plugin.version}</version>
         </plugin>
+
+        <!-- JavaDoc Plugin -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>${maven.javadoc.plugin.version}</version>
+          <configuration>
+            <encoding>UTF-8</encoding>
+            <docencoding>UTF-8</docencoding>
+            <charset>UTF-8</charset>
+            <source>21</source>
+            <target>21</target>
+            <windowTitle>FusionKit ${project.version} API</windowTitle>
+            <doctitle>FusionKit ${project.version} API Documentation</doctitle>
+            <bottom>
+              <![CDATA[
+                Copyright © 2024 Marc Andre Herpers. All rights reserved.
+                <br>
+                <a href="https://github.com/marcandreher/fusionkit" target="_blank">GitHub Repository</a>
+              ]]>
+            </bottom>
+            <!-- Configure JavaDoc to be more lenient -->
+            <doclint>none</doclint>
+            <failOnError>false</failOnError>
+            <failOnWarnings>false</failOnWarnings>
+            <quiet>true</quiet>
+            <additionalJOptions>
+              <additionalJOption>-Xdoclint:none</additionalJOption>
+              <additionalJOption>-J-Duser.language=en</additionalJOption>
+              <additionalJOption>-J-Duser.country=US</additionalJOption>
+            </additionalJOptions>
+            <!-- Only include Oracle's Java API docs as external link -->
+            <links>
+              <link>https://docs.oracle.com/en/java/javase/21/docs/api/</link>
+            </links>
+          </configuration>
+          <executions>
+            <execution>
+              <id>attach-javadocs</id>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
       </plugins>
     </pluginManagement>
 
@@ -295,6 +343,16 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+      </plugin>
+      
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+      </plugin>
+      
+      <plugin>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
       </plugin>
     </plugins>
   </build>
