--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
     <hikari.version>7.0.2</hikari.version>
 
     <!-- Utility Dependencies -->
+    <jline.version>3.30.6</jline.version>
     <gson.version>2.13.2</gson.version>
     <logback.version>1.5.19</logback.version>
     <lombok.version>1.18.42</lombok.version>
@@ -139,6 +140,11 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>${logback.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jline</groupId>
+      <artifactId>jline</artifactId>
+      <version>${jline.version}</version>
     </dependency>
 
     <!-- =============================================== -->
